# base_python

./: .gitignore  .pre-commit-config.yaml  .pyrightconfig.json  README.md  main.py  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: lint.yaml  test.yaml
src/: addition.py  main.py  operations.py
tests/: test_addition.py  test_operations.py
